; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_insert_maxts.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_insert_maxts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MTRC_MAXTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ht_insert_maxts(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @MTRC_MAXTS, align 4
  %12 = call i8* @get_hash(i32 %10, i32 %11)
  store i8* %12, i8** %9, align 8
  %13 = load i8*, i8** %9, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %28

16:                                               ; preds = %3
  %17 = load i8*, i8** %9, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @get_iu64(i8* %17, i32 %18)
  store i32 %19, i32* %8, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp slt i32 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %16
  %23 = load i8*, i8** %9, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @ins_iu64(i8* %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %22, %16
  store i32 0, i32* %4, align 4
  br label %28

28:                                               ; preds = %27, %15
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i8* @get_hash(i32, i32) #1

declare dso_local i32 @get_iu64(i8*, i32) #1

declare dso_local i32 @ins_iu64(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
